--- a/Python/Lez_20231113.ipynb
+++ b/Python/Lez_20231113.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cicli"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -210,6 +217,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### pseudo-codice - prima di scrivere in Python\n",
+    "\n",
+    "ho un mazzo\n",
+    "\n",
+    "\n",
+    "- faccio un ciclo lungo tutto il mazzo\n",
+    "  - faccio un ciclo for annidato lungo tutto il mazzo\n",
+    "    - posizione 1 del mazzo è superiore rispetto alla successiva?\n",
+    "      - se Sì scambio\n",
+    "      - se no niente\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -358,22 +381,6 @@
     "                min_index = j\n",
     "        array[i], array[min_index] = array[min_index], array[i]\n",
     "        "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### pseudo-codice\n",
-    "\n",
-    "ho un mazzo\n",
-    "\n",
-    "\n",
-    "- faccio un ciclo lungo tutto il mazzo\n",
-    "  - faccio un ciclo for annidato lungo tutto il mazzo\n",
-    "    - posizione 1 del mazzo è superiore rispetto alla successiva?\n",
-    "      - se Sì scambio\n",
-    "      - se no niente\n"
    ]
   },
   {
