--- a/Python/Lez_20231113.ipynb
+++ b/Python/Lez_20231113.ipynb
@@ -418,6 +418,31 @@
     "\n",
     "print(\"Questi sono stati i tuoi tentativi\", array)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "var_str1 = \"\"\n",
+    "var_str2 = \"\"\n",
+    "\n",
+    "res = var_str1 != var_str2\n",
+    "\n",
+    "print()"
+   ]
   }
  ],
  "metadata": {
@@ -436,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
