--- a/Python/Lez_20231213.ipynb
+++ b/Python/Lez_20231213.ipynb
@@ -2162,7 +2162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -2170,7 +2170,10 @@
      "output_type": "stream",
      "text": [
       "Media ore di studio: 10.52\n",
-      "Media voti: 49.18\n"
+      "Media voti: 49.18\n",
+      "Grade         49.181818\n",
+      "StudyHours    10.522727\n",
+      "dtype: float64\n"
      ]
     },
     {
@@ -2197,6 +2200,7 @@
        "      <th>Name</th>\n",
        "      <th>StudyHours</th>\n",
        "      <th>Grade</th>\n",
+       "      <th>Pass</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2205,80 +2209,90 @@
        "      <td>Joann</td>\n",
        "      <td>11.50</td>\n",
        "      <td>50.0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Rosie</td>\n",
        "      <td>16.00</td>\n",
        "      <td>97.0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Frederic</td>\n",
        "      <td>11.50</td>\n",
        "      <td>53.0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Giovanni</td>\n",
        "      <td>14.50</td>\n",
        "      <td>74.0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>Francesca</td>\n",
        "      <td>15.50</td>\n",
        "      <td>82.0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>Rajab</td>\n",
        "      <td>13.75</td>\n",
        "      <td>62.0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>Jenny</td>\n",
        "      <td>15.50</td>\n",
        "      <td>70.0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>Skye</td>\n",
        "      <td>12.00</td>\n",
        "      <td>52.0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>Daniel</td>\n",
        "      <td>12.50</td>\n",
        "      <td>63.0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>Aisha</td>\n",
        "      <td>12.00</td>\n",
        "      <td>64.0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Name  StudyHours  Grade\n",
-       "1       Joann       11.50   50.0\n",
-       "3       Rosie       16.00   97.0\n",
-       "6    Frederic       11.50   53.0\n",
-       "9    Giovanni       14.50   74.0\n",
-       "10  Francesca       15.50   82.0\n",
-       "11      Rajab       13.75   62.0\n",
-       "14      Jenny       15.50   70.0\n",
-       "19       Skye       12.00   52.0\n",
-       "20     Daniel       12.50   63.0\n",
-       "21      Aisha       12.00   64.0"
+       "         Name  StudyHours  Grade   Pass\n",
+       "1       Joann       11.50   50.0  False\n",
+       "3       Rosie       16.00   97.0   True\n",
+       "6    Frederic       11.50   53.0  False\n",
+       "9    Giovanni       14.50   74.0   True\n",
+       "10  Francesca       15.50   82.0   True\n",
+       "11      Rajab       13.75   62.0   True\n",
+       "14      Jenny       15.50   70.0   True\n",
+       "19       Skye       12.00   52.0  False\n",
+       "20     Daniel       12.50   63.0   True\n",
+       "21      Aisha       12.00   64.0   True"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2292,6 +2306,7 @@
     "media_ore = df_studenti['StudyHours'].mean()\n",
     "#stampa risultati\n",
     "print('Media ore di studio: {:.2f}\\nMedia voti: {:.2f}'.format(media_ore, media_voti))\n",
+    "print(df_studenti[['Grade', 'StudyHours']].mean())\n",
     "#filtra il dataframe per studenti che hanno studiato più della media\n",
     "df_studenti_maggioremedia = df_studenti[df_studenti.StudyHours  >= media_ore]\n",
     "df_studenti_maggioremedia"
