--- a/Python/Lab - Flights.ipynb
+++ b/Python/Lab - Flights.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab 01 - Flights Data Exploration \n",
+    "# Lab - Flights Data Exploration \n",
     "\n",
     "In this Lab you'll explore a real-world dataset containing flights data from the US Department of Transportation.\n",
     "\n",
