--- a/Python/Lez_20231213.ipynb
+++ b/Python/Lez_20231213.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        " 64]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        "49.18181818181818"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "        48.  , 52.  , 63.  , 64.  ]])"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "21      Aisha  64.0      12.00"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
        "23        Ted         NaN    NaN"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
        "Name: 5, dtype: object"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
        "5  Vicky        1.00    3.0"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
        "Name: 5, dtype: object"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +773,7 @@
        "4  Ethan        9.25   49.0"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +795,7 @@
        "Name: 5, dtype: object"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +815,7 @@
        "3.0"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
        "2  Pedro         9.0   47.0"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
        "2  Pedro         9.0   47.0"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1079,7 +1079,7 @@
        "21      Aisha       12.00   64.0"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
        "Name: 6, dtype: object"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1125,7 @@
        "Name: 9, dtype: object"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1272,7 +1272,7 @@
        "21      Aisha       12.00   64.0"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1357,7 @@
        "4  Ethan        9.25   49.0"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1442,7 +1442,7 @@
        "23     Ted         NaN    NaN"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1453,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1519,7 +1519,7 @@
        "3  Rosie        16.0   97.0"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1530,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1567,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1773,7 +1773,7 @@
        "23  False        True   True"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1784,7 +1784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1796,7 +1796,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1807,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1859,7 +1859,7 @@
        "23   Ted         NaN    NaN"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1882,7 +1882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1934,7 +1934,7 @@
        "23   Ted   10.413043    NaN"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1949,7 +1949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2141,7 +2141,7 @@
        "21      Aisha       12.00   64.0"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2162,7 +2162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2200,7 +2200,6 @@
        "      <th>Name</th>\n",
        "      <th>StudyHours</th>\n",
        "      <th>Grade</th>\n",
-       "      <th>Pass</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2209,90 +2208,80 @@
        "      <td>Joann</td>\n",
        "      <td>11.50</td>\n",
        "      <td>50.0</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Rosie</td>\n",
        "      <td>16.00</td>\n",
        "      <td>97.0</td>\n",
-       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Frederic</td>\n",
        "      <td>11.50</td>\n",
        "      <td>53.0</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Giovanni</td>\n",
        "      <td>14.50</td>\n",
        "      <td>74.0</td>\n",
-       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>Francesca</td>\n",
        "      <td>15.50</td>\n",
        "      <td>82.0</td>\n",
-       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>Rajab</td>\n",
        "      <td>13.75</td>\n",
        "      <td>62.0</td>\n",
-       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>Jenny</td>\n",
        "      <td>15.50</td>\n",
        "      <td>70.0</td>\n",
-       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>Skye</td>\n",
        "      <td>12.00</td>\n",
        "      <td>52.0</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>Daniel</td>\n",
        "      <td>12.50</td>\n",
        "      <td>63.0</td>\n",
-       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>Aisha</td>\n",
        "      <td>12.00</td>\n",
        "      <td>64.0</td>\n",
-       "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Name  StudyHours  Grade   Pass\n",
-       "1       Joann       11.50   50.0  False\n",
-       "3       Rosie       16.00   97.0   True\n",
-       "6    Frederic       11.50   53.0  False\n",
-       "9    Giovanni       14.50   74.0   True\n",
-       "10  Francesca       15.50   82.0   True\n",
-       "11      Rajab       13.75   62.0   True\n",
-       "14      Jenny       15.50   70.0   True\n",
-       "19       Skye       12.00   52.0  False\n",
-       "20     Daniel       12.50   63.0   True\n",
-       "21      Aisha       12.00   64.0   True"
+       "         Name  StudyHours  Grade\n",
+       "1       Joann       11.50   50.0\n",
+       "3       Rosie       16.00   97.0\n",
+       "6    Frederic       11.50   53.0\n",
+       "9    Giovanni       14.50   74.0\n",
+       "10  Francesca       15.50   82.0\n",
+       "11      Rajab       13.75   62.0\n",
+       "14      Jenny       15.50   70.0\n",
+       "19       Skye       12.00   52.0\n",
+       "20     Daniel       12.50   63.0\n",
+       "21      Aisha       12.00   64.0"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2314,7 +2303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2323,7 +2312,7 @@
        "66.7"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2343,7 +2332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2558,7 +2547,7 @@
        "21      Aisha       12.00   64.0   True"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2576,7 +2565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2588,7 +2577,7 @@
        "Name: Name, dtype: int64"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2601,7 +2590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2656,7 +2645,7 @@
        "True    14.250000  73.142857"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2668,7 +2657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2883,7 +2872,7 @@
        "5       Vicky        1.00    3.0  False"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2903,7 +2892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2912,7 +2901,7 @@
        "<Axes: xlabel='Name'>"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2933,7 +2922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2956,7 +2945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2983,7 +2972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2992,7 +2981,7 @@
        "<Axes: xlabel='Name'>"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3013,16 +3002,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\WilliamRussell\\AppData\\Local\\Temp\\ipykernel_8788\\2974800213.py:7: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\WilliamRussell\\AppData\\Local\\Temp\\ipykernel_15984\\2974800213.py:7: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax[0].set_xticklabels(df_studenti.Name, rotation=90)\n",
-      "C:\\Users\\WilliamRussell\\AppData\\Local\\Temp\\ipykernel_8788\\2974800213.py:17: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "C:\\Users\\WilliamRussell\\AppData\\Local\\Temp\\ipykernel_15984\\2974800213.py:17: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n"
      ]
     },
@@ -3066,7 +3055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3075,7 +3064,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3096,14 +3085,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\WilliamRussell\\AppData\\Local\\Temp\\ipykernel_8788\\2734310283.py:23: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "C:\\Users\\WilliamRussell\\AppData\\Local\\Temp\\ipykernel_15984\\2734310283.py:23: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n"
      ]
     },
@@ -3146,14 +3135,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\WilliamRussell\\AppData\\Local\\Temp\\ipykernel_8788\\2357491774.py:5: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "C:\\Users\\WilliamRussell\\AppData\\Local\\Temp\\ipykernel_15984\\2357491774.py:5: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n"
      ]
     },
@@ -3178,7 +3167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3195,7 +3184,7 @@
        "Name: Grade, dtype: float64"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3206,7 +3195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -3215,13 +3204,20 @@
        "93.85"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "var_data.quantile(.99)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Per vedere il Lab apri il file [Lab - Flights](Lab%20-%20Flights.ipynb)"
    ]
   }
  ],
